Add french option

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 	Hello how are you
 	{{/english}}
 	{{^english}}
-	Hola, como esta!!!!!!
+		{{#french}}
+		bonjour! como tale vu?
+		{{/french}}
+		{{^french}}
+		Hola, como esta!!!!!!
+		{{/french}}
 	{{/english}}
+
 </body>
 
 </html>
